examples/test/testpolicy9086.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9086
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key41: value49
      key34: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value9
          key29: value31
          key38: value48
      podSelector:
        matchLabels:
          key18: value12
